# Web-Server-in-Cpp

./: BindingSocket.cpp  CMakeLists.txt  ConnectingSocket.hpp  README.md  SimpleSocket.hpp  build.bat  build_direct.bat  build_gcc.bat  build_simple.bat
Networking/: hdelibc-networking.hpp
public/: README.md  admin.html  index.html  script.js  style.css
server/: AdvancedServer.cpp  AdvancedServer.hpp  SimpleServer.cpp  SimpleServer.hpp  TestServer.cpp  TestServer.hpp  test.cpp
sockets/: BindingSocket.cpp  BindingSocket.hpp  ConnectingSocket.cpp  ConnectingSocket.hpp  ListeningSocket.cpp  ListeningSocket.hpp  SimpleSocket.cpp  SimpleSocket.hpp  hdelibc-sockets.hpp  main.cpp
